--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "server":"node ./server/bin/www"
+    "server":"nodemon ./server/bin/www"
   },
   "jest": {
     "collectCoverageFrom": [
