--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd-mobile": "^2.0.3",
     "autoprefixer": "7.1.6",
+    "axios": "^0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -112,5 +113,14 @@
   "devDependencies": {
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4"
+  },
+  "proxy": {
+      "/api/": {
+            "target": "http://127.0.0.1:3001/",
+            "changeOrigin": true,
+            "pathRewrite": {
+                "/api": ""
+            }
+      }
   }
 }
