--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "mongoose": "^4.13.5",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -42,6 +43,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -115,12 +117,12 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4"
   },
   "proxy": {
-      "/api/": {
-            "target": "http://127.0.0.1:3001/",
-            "changeOrigin": true,
-            "pathRewrite": {
-                "/api": ""
-            }
+    "/api/": {
+      "target": "http://127.0.0.1:3001/",
+      "changeOrigin": true,
+      "pathRewrite": {
+        "/api": ""
       }
+    }
   }
 }
