--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "body-parser": "~1.16.0",
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "~1.4.3",
