--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.13.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "socket.io": "^2.0.4"
   }
 }
