遗留问题 socket.io客户端url设置为localhost:3001时手机端无法s发送消息

--- a/package.json
+++ b/package.json
@@ -126,6 +126,13 @@
       "pathRewrite": {
         "/api": ""
       }
+    },
+    "/chat/":{
+      "target": "http://127.0.0.1:3001/",
+      "changeOrigin": true,
+      "pathRewrite": {
+        "/chat": ""
+      }
     }
   }
 }
