--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "antd-mobile": "^2.0.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-plugin-import": "^1.6.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "6.26.0",
     "browser-cookies": "^1.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -97,7 +105,9 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "es2015",
+      "stage-0",
+      "react"
     ],
     "plugins": [
       [
@@ -127,7 +137,7 @@
         "/api": ""
       }
     },
-    "/chat/":{
+    "/chat/": {
       "target": "http://127.0.0.1:3001/",
       "changeOrigin": true,
       "pathRewrite": {
