--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-plugin-import": "^1.6.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
@@ -119,6 +120,9 @@
       ],
       [
         "transform-decorators-legacy"
+      ],
+      [
+        "transform-runtime"
       ]
     ]
   },
