--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browser-cookies": "^1.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
@@ -37,11 +38,13 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "^2.29.0",
     "jest": "20.0.4",
     "mongoose": "^4.13.5",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
+    "postcss-color-hex-alpha": "^3.0.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -58,6 +61,7 @@
     "socket.io-client": "^2.0.4",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
@@ -68,7 +72,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "server": "nodemon ./server/bin/www"
+    "server": "nodemon ./server/bin/www",
+    "mybuild": "webpack --config config/webpack.config.myprod.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -106,9 +111,10 @@
   },
   "babel": {
     "presets": [
+      "env",
+      "react",
       "es2015",
-      "stage-0",
-      "react"
+      "stage-0"
     ],
     "plugins": [
       [
