--- a/package.json
+++ b/package.json
@@ -106,9 +106,7 @@
   },
   "babel": {
     "presets": [
-      "es2015",
-      "stage-0",
-      "react"
+      "react-app"
     ],
     "plugins": [
       [
